# speech-tapgame-aamas18

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml  requirements.txt
GameUtils/: AudioRecorder.py  Curriculum.py  GlobalSettings.py  ROSUtils.py  __init__.py  phoneme_dict
GameUtils/PronunciationUtils/: PronunciationUtils.py  __init__.py  phoneme_counter.py  recorder.py
GameUtils/PronunciationUtils/data/: arpabet_covariance_matrix.npy  arpabet_covariance_matrix.txt  arpabet_mapping.csv  covariance_matrix.npy  covariance_matrix.txt  glove_distances.npy  glove_distances.txt  nettalk.data  phoneme_subsitution_costs.npy  phoneme_subsitution_costs.txt  sample_speechace_output.data  weighted_lev_distances.npy  weighted_lev_distances.txt  wpsm.csv
GameUtils/PronunciationUtils/data/recordings/: README.txt
TapGameController/: AgentModel.py  JiboBehaviors.py  ROSNodeMgr.py  RobotBehaviorList.py  StudentPhonemeModel.py  StudentWordModel.py  TapGameFSM.py  TapGamePosttestFSM.py  TapGamePracticeFSM.py  TegaBehaviors.py
TapGameController/tests/: test_basic.py  test_fsm.py  test_gp.py
msg/: TapGameCommand.msg  TapGameLog.msg  TapGameRoundSummary.msg
scripts/: __init__.py  generate_covariance_matrix.py  generate_curriculum.py  generate_glove_matrix.py  generate_levenshtein_weight_matrix.py  rosbag_analysis.py  run_unit_tests.py  start_recording_linux.sh  start_recording_macosx.sh  start_tap_game_controller.py  start_tap_study.sh  tap_bag2movie.py
